--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -63,7 +63,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        #working-directory: ${{ inputs.path }}
+        #working-directory: ${{ inputs.path }} - hello
     env:
       #WORKING_DIRECTORY: "./dev"
       ###AZURE Client details###
