--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -6,10 +6,10 @@ on:
 
 env:
   WORKING_DIRECTORY: "./dev"
-  ARM_CLIENT_ID: ${{ secrets.DEV_ARM_CLIENT_ID }}
-  ARM_CLIENT_SECRET: ${{ secrets.DEV_ARM_CLIENT_SECRET }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.DEV_ARM_SUBSCRIPTION_ID }}
-  ARM_TENANT_ID: ${{ secrets.DEV_ARM_TENANT_ID }}
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
 jobs:
   plan:
