--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -8,7 +8,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@main
     with:
       path: dev ## Path to terraform root module (Required)
       enable_TFSEC: true ## (Optional)  Enable TFSEC IaC scans (Private repo requires GitHub enterprise)
@@ -20,7 +20,7 @@ jobs:
 
   Deploy_Dev:
     needs: Plan_Dev
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
     with:
       path: dev ## Path to terraform root module (Required)
       tgh_environment: dev ## GH Environment. Default=null - (Optional)
@@ -35,7 +35,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@main
     with:
       path: stage
       enable_TFSEC: true
@@ -47,7 +47,7 @@ jobs:
 
   Deploy_Stage:
     needs: [Plan_Stage, Deploy_Dev]
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
     with:
       path: stage
       gh_environment: stage
@@ -62,7 +62,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@main
     with:
       path: prod
       enable_TFSEC: true
@@ -74,7 +74,7 @@ jobs:
 
   Deploy_Prod:
     needs: [Plan_Prod, Deploy_Stage]
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
     with:
       path: prod
       gh_environment: prod
