--- a/.github/workflows/az_tf_plan.yml
+++ b/.github/workflows/az_tf_plan.yml
@@ -48,7 +48,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@master
 
       - name: Scan IaC - tfsec
         if: ${{ inputs.ENABLE_TFSEC == 'true' }}
@@ -62,17 +62,22 @@ jobs:
         with:
           sarif_file: tfsec.sarif
 
+      - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.0.0
+          terraform_wrapper: false
+
       - name: Setup Terragrunt
         uses: autero1/action-terragrunt@v1.1.0
         with:
-          terragrunt_version: 0.78.4
+          terragrunt_version: 0.37.1
 
       - name: Interact with Terragrunt
         run: terragrunt --version
 
       - name: "Terragrunt Init"
         run: terragrunt run-all init --terragrunt-non-interactive
-        working-directory: ${{ env.WORKING_DIRECTORY }}
+        working-directory: ${{ inputs.path }}
 
       - name: "Terragrunt Plan"
         run: terragrunt run-all plan --terragrunt-non-interactive
