--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -8,7 +8,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@main
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@development # @development means github branch
     with:
       path: dev ## Path to terraform root module (Required)
       enable_TFSEC: true ## (Optional)  Enable TFSEC IaC scans (Private repo requires GitHub enterprise)
@@ -20,7 +20,7 @@ jobs:
 
   Deploy_Dev:
     needs: Plan_Dev
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@development
     with:
       path: dev ## Path to terraform root module (Required)
       gh_environment: dev ## GH Environment. Default=null - (Optional)
@@ -35,7 +35,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@main
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@staging
     with:
       path: stage
       enable_TFSEC: true
@@ -47,7 +47,7 @@ jobs:
 
   Deploy_Stage:
     needs: [Plan_Stage, Deploy_Dev]
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@staging
     with:
       path: stage
       gh_environment: stage
