--- a/.github/workflows/03_prod_caller.yml
+++ b/.github/workflows/03_prod_caller.yml
@@ -22,7 +22,7 @@ jobs:
       arm_tenant_id: ${{ secrets.PROD_ARM_TENANT_ID }}
 
   Deploy_Prod:
-    needs: [Plan_Prod, Deploy_Stage]
+    needs: [Plan_Prod]
     uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_apply.yml@main
     with:
       path: prod
