--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,7 +14,7 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan.yml@v1
+    uses: linh5847/azure-terragrunt-terraform-github-action/.github/workflows/az_tf_plan
     with:
       path: dev ## Path to terraform root module (Required)
       enable_TFSEC: true ## (Optional)  Enable TFSEC IaC scans (Private repo requires GitHub enterprise)
